# lumo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  makefile  scene.toml
include/: BindlessTexture.hpp  Camera.hpp  ComputeShader.hpp  Config.hpp  Framebuffer.hpp  IndexBuffer.hpp  Loader.hpp  Material.hpp  Math.hpp  Renderer.hpp  Shader.hpp  ShaderStorage.hpp  Texture.hpp  Triangle.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/glad/: glad.h
res/shaders/: Basic.comp  Basic.frag  Basic.vert
src/: BindlessTexture.cpp  Camera.cpp  ComputeShader.cpp  Config.cpp  Framebuffer.cpp  IndexBuffer.cpp  Loader.cpp  Material.cpp  Renderer.cpp  Shader.cpp  ShaderStorage.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  glad.c  main.cpp  tiny_obj_loader.cpp
